--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "install:all": "npm install && npm install --prefix Backend && npm install --prefix Frontend",
-    "dev": "concurrently \"npm start --prefix Backend\" \"npm start --prefix Frontend\"",
+    "dev": "concurrently \"npm run dev --prefix Backend\" \"npm start --prefix Frontend\"",
     "migrate:donors": "node Backend/scripts/migrateDonors.js"
   },
   "devDependencies": {
